--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,23 @@ jobs:
   test:
     name: Build
     runs-on: ubuntu-latest
+    services:
+
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: 123456
+          POSTGRES_DB: simple_bank
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
+
     steps:
       - uses: actions/checkout@v3
 
@@ -22,6 +39,9 @@ jobs:
 
       - name: Check out code into the Go directory
         uses: actions/setup-go@v4
+
+      - name: Run migration
+        run: make migrateup
 
       - name: Test
         run: make test
