--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install goland migration
         run: |
           curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.darwin-amd64.tar.gz | tar xvz
-          sudo mv migrate.darwin-amd64 /usr/bin/
+          sudo mv migrate.darwin-amd64 /usr/bin/migrate
           which migrate
           
 
