--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,9 @@ jobs:
 
       - name: Install goland migration
         run: |
-          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.darwin-amd64.tar.gz | tar xvz
+          curl -L https://github.com/golang-migrate/migrate/releases/download/v4.17.0/migrate.darwin-arm64.tar.gz | tar xvz
           sudo mv migrate /usr/bin/migrate
           which migrate
-          
 
       - name: Run migration
         run: make migrateup
